--- a/transport/zmq/examples/BUILD.bazel
+++ b/transport/zmq/examples/BUILD.bazel
@@ -1,6 +1,17 @@
+load("@pybind11_bazel//:build_defs.bzl", "pybind_extension")
+
 cc_binary(
-    name = "pub_sub_0",
-    srcs = ["pub_sub_0.cpp"],
+    name = "pub_sub_0_cpp",
+    srcs = ["pub_sub_0_cpp.cpp"],
     copts = ["-std=c++2a"],
     deps = ["//transport/zmq:zmq"],
+)
+
+py_binary(
+    name = "pub_sub_0_py",
+    srcs = ["pub_sub_0_py.py"],
+    deps = [
+        "//core/python:roboflex_core_python",
+        "//transport/zmq/python:roboflex_transport_zmq_python",
+    ],
 )
