--- a/transport/mqtt/python/BUILD.bazel
+++ b/transport/mqtt/python/BUILD.bazel
@@ -1,19 +1,19 @@
 load("@pybind11_bazel//:build_defs.bzl", "pybind_extension")
 
 pybind_extension(
-    name = "roboflex_transport_zmq_ext",
+    name = "roboflex_transport_mqtt_ext",
     srcs = ["pybindings.cpp"],
     copts = ["-std=c++2a"],
     visibility = ["//visibility:public"],
     deps = [
-        "//transport/zmq:zmq",
+        "//transport/mqtt:mqtt",
         "//core/python:roboflex_core_python_header",
     ],
 )
 
 py_library(
-    name = "roboflex_transport_zmq_python",
+    name = "roboflex_transport_mqtt_python",
     srcs = ["__init__.py"],
-    data = [":roboflex_transport_zmq_ext.so"],
+    data = [":roboflex_transport_mqtt_ext.so"],
     visibility = ["//visibility:public"],
 )
