--- a/core/BUILD.bazel
+++ b/core/BUILD.bazel
@@ -8,14 +8,17 @@ cc_library(
         "node.cpp",
         "serialization/flex_utils.cpp",
         "serialization/flex_tensor_format.cpp",
+        "util/get_process_memory_usage.cpp",
         "util/utils.cpp",
         "core_nodes/frequency_generator.cpp",
+        "core_nodes/metrics.cpp",
     ],
     hdrs = [
         "core.h",
         "message.h",
         "message_backing_store.h",
         "node.h",
+        "util/get_process_memory_usage.h",
         "util/uuid.h",
         "util/utils.h",
         "serialization/flex_utils.h",
@@ -30,6 +33,7 @@ cc_library(
         "core_nodes/last_one.h",
         "core_nodes/map_fun.h",
         "core_nodes/message_printer.h",
+        "core_nodes/metrics.h",
     ],
     data = ['__init__.py'], # yeah it's a python file, but it won't hurt to just have it there
     copts = ["-std=c++2a"],
