--- a/core/BUILD.bazel
+++ b/core/BUILD.bazel
@@ -11,6 +11,7 @@ cc_library(
         "util/get_process_memory_usage.cpp",
         "util/utils.cpp",
         "core_nodes/frequency_generator.cpp",
+        "core_nodes/graph_control.cpp",
         "core_nodes/metrics.cpp",
     ],
     hdrs = [
@@ -30,6 +31,7 @@ cc_library(
         "core_nodes/callback_fun.h",
         "core_nodes/filter_fun.h",
         "core_nodes/frequency_generator.h",
+        "core_nodes/graph_control.h",
         "core_nodes/last_one.h",
         "core_nodes/map_fun.h",
         "core_nodes/message_printer.h",
