--- a/core/python/BUILD.bazel
+++ b/core/python/BUILD.bazel
@@ -4,7 +4,7 @@ load("@pybind11_bazel//:build_defs.bzl", "pybind_extension")
 cc_library(
     name = "roboflex_core_python_header",
     hdrs = ["pybindings.h"],
-    copts = ["-std=c++2a"],
+    copts = ["-std=c++20"],
     include_prefix = "roboflex/core",
     visibility = ["//visibility:public"],
     deps = ["//core:roboflex_core"],
@@ -13,7 +13,7 @@ cc_library(
 pybind_extension(
     name = "roboflex_core_python_ext",
     srcs = [ "pybindings.cpp" ],
-    copts = ["-std=c++2a"],
+    copts = ["-std=c++20"],
     visibility = ["//visibility:public"],
     deps = [
         ":roboflex_core_python_header",
