--- a/dynamixel/BUILD.bazel
+++ b/dynamixel/BUILD.bazel
@@ -4,7 +4,7 @@ cc_library(
     name = "dynamixel_controller",
     srcs = ["dynamixel_controller.cpp"],
     hdrs = ["dynamixel_controller.h"],
-    copts = ["-std=c++2a"],
+    copts = ["-std=c++20"],
     include_prefix = "roboflex/dynamixel",
     visibility = ["//visibility:public"],
     deps = [
@@ -17,7 +17,7 @@ cc_library(
     name = "dynamixel",
     srcs = ["dynamixel.cpp"],
     hdrs = ["dynamixel.h"],
-    copts = ["-std=c++2a"],
+    copts = ["-std=c++20"],
     include_prefix = "roboflex/dynamixel",
     data = ['__init__.py'],
     visibility = ["//visibility:public"],
