--- a/examples/realsense_tv/BUILD.bazel
+++ b/examples/realsense_tv/BUILD.bazel
@@ -3,7 +3,7 @@ load("@pybind11_bazel//:build_defs.bzl", "pybind_extension")
 cc_binary(
     name = "realsense_tv_cpp",
     srcs = ["realsense_tv_cpp.cpp"],
-    copts = ["-std=c++2a"],
+    copts = ["-std=c++20"],
     deps = [
         "//core:roboflex_core",
         "//realsense:realsense",
