--- a/examples/webcam_tv/BUILD.bazel
+++ b/examples/webcam_tv/BUILD.bazel
@@ -3,7 +3,7 @@ load("@pybind11_bazel//:build_defs.bzl", "pybind_extension")
 cc_binary(
     name = "webcam_tv_cpp",
     srcs = ["webcam_tv_cpp.cpp"],
-    copts = ["-std=c++2a"],
+    copts = ["-std=c++20"],
     deps = [
         "//core:roboflex_core",
         "//webcam_uvc:webcam_uvc",
