--- a/metrics_central/BUILD.bazel
+++ b/metrics_central/BUILD.bazel
@@ -4,7 +4,7 @@ cc_library(
     name = "profiler",
     srcs = ["profiler.cpp"],
     hdrs = ["profiler.h"],
-    copts = ["-std=c++2a"],
+    copts = ["-std=c++20"],
     include_prefix = "roboflex/metrics_central",
     visibility = ["//visibility:public"],
     deps = [
