--- a/metrics_central/examples/BUILD.bazel
+++ b/metrics_central/examples/BUILD.bazel
@@ -1,6 +1,6 @@
 cc_binary(
     name = "profile_graph",
     srcs = ["profile_graph.cpp"],
-    copts = ["-std=c++2a"],
+    copts = ["-std=c++20"],
     deps = ["//metrics_central:profiler"],
 )
