--- a/realsense/BUILD.bazel
+++ b/realsense/BUILD.bazel
@@ -5,7 +5,7 @@ cc_library(
     name = "realsense",
     srcs = ["realsense.cpp"],
     hdrs = ["realsense.h"],
-    copts = ["-std=c++2a"],
+    copts = ["-std=c++20"],
     include_prefix = "roboflex/realsense",
     visibility = ["//visibility:public"],
     deps = [
@@ -17,7 +17,7 @@ cc_library(
 pybind_extension(
     name = "roboflex_realsense_ext",
     srcs = ["pybindings.cpp"],
-    copts = ["-std=c++2a"],
+    copts = ["-std=c++20"],
     visibility = ["//visibility:public"],
     deps = [
         ":realsense",
