--- a/realsense/examples/BUILD.bazel
+++ b/realsense/examples/BUILD.bazel
@@ -3,7 +3,7 @@ load("@pybind11_bazel//:build_defs.bzl", "pybind_extension")
 cc_binary(
     name = "run_realsense_cpp",
     srcs = ["run_realsense_cpp.cpp"],
-    copts = ["-std=c++2a"],
+    copts = ["-std=c++20"],
     deps = ["//realsense:realsense"],
 )
 
