--- a/transport/mqtt/BUILD.bazel
+++ b/transport/mqtt/BUILD.bazel
@@ -4,7 +4,7 @@ cc_library(
     name = "mqtt",
     srcs = ["mqtt_nodes.cpp"],
     hdrs = ["mqtt_nodes.h"],
-    copts = ["-std=c++2a"],
+    copts = ["-std=c++20"],
     data = ['__init__.py'],
     visibility = ["//visibility:public"],
     include_prefix = "roboflex/transport/mqtt",
