--- a/transport/zmq/BUILD.bazel
+++ b/transport/zmq/BUILD.bazel
@@ -4,7 +4,7 @@ cc_library(
     name = "zmq",
     srcs = ["zmq_nodes.cpp"],
     hdrs = ["zmq_nodes.h"],
-    copts = ["-std=c++2a"],
+    copts = ["-std=c++20"],
     data = ['__init__.py'],
     visibility = ["//visibility:public"],
     include_prefix = "roboflex/transport/zmq",
