--- a/transport/zmq/examples/BUILD.bazel
+++ b/transport/zmq/examples/BUILD.bazel
@@ -3,7 +3,7 @@ load("@pybind11_bazel//:build_defs.bzl", "pybind_extension")
 cc_binary(
     name = "pub_sub_0_cpp",
     srcs = ["pub_sub_0_cpp.cpp"],
-    copts = ["-std=c++2a"],
+    copts = ["-std=c++20"],
     deps = ["//transport/zmq:zmq"],
 )
 
