--- a/transport/zmq/python/BUILD.bazel
+++ b/transport/zmq/python/BUILD.bazel
@@ -3,7 +3,7 @@ load("@pybind11_bazel//:build_defs.bzl", "pybind_extension")
 pybind_extension(
     name = "roboflex_transport_zmq_ext",
     srcs = ["pybindings.cpp"],
-    copts = ["-std=c++2a"],
+    copts = ["-std=c++20"],
     visibility = ["//visibility:public"],
     deps = [
         "//transport/zmq:zmq",
