--- a/visualization/BUILD.bazel
+++ b/visualization/BUILD.bazel
@@ -5,7 +5,7 @@ cc_library(
     name = "visualization",
     srcs = ["visualization.cpp"],
     hdrs = ["visualization.h"],
-    copts = ["-std=c++2a"],
+    copts = ["-std=c++20"],
     include_prefix = "roboflex/visualization",
     visibility = ["//visibility:public"],
     deps = [
@@ -17,7 +17,7 @@ cc_library(
 pybind_extension(
     name = "roboflex_visualization_ext",
     srcs = ["pybindings.cpp"],
-    copts = ["-std=c++2a"],
+    copts = ["-std=c++20"],
     visibility = ["//visibility:public"],
     deps = ["//visualization"],
 )
