--- a/webcam_uvc/BUILD.bazel
+++ b/webcam_uvc/BUILD.bazel
@@ -5,7 +5,7 @@ cc_library(
     name = "webcam_uvc",
     srcs = ["webcam_uvc.cpp"],
     hdrs = ["webcam_uvc.h"],
-    copts = ["-std=c++2a"],
+    copts = ["-std=c++20"],
     include_prefix = "roboflex/webcam_uvc",
     visibility = ["//visibility:public"],
     deps = [
@@ -19,7 +19,7 @@ cc_library(
 pybind_extension(
     name = "roboflex_webcam_uvc_ext",
     srcs = ["pybindings.cpp"],
-    copts = ["-std=c++2a"],
+    copts = ["-std=c++20"],
     visibility = ["//visibility:public"],
     deps = ["//webcam_uvc"],
 )
