--- a/webcam_uvc/examples/BUILD.bazel
+++ b/webcam_uvc/examples/BUILD.bazel
@@ -3,7 +3,7 @@ load("@pybind11_bazel//:build_defs.bzl", "pybind_extension")
 cc_binary(
     name = "run_webcam_cpp",
     srcs = ["run_webcam_cpp.cpp"],
-    copts = ["-std=c++2a"],
+    copts = ["-std=c++20"],
     deps = ["//webcam_uvc:webcam_uvc"],
 )
 
