--- a/metrics_central/BUILD.bazel
+++ b/metrics_central/BUILD.bazel
@@ -1,4 +1,5 @@
 load("@rules_cc//cc:defs.bzl", "cc_library")
+load("@pybind11_bazel//:build_defs.bzl", "pybind_extension")
 
 cc_library(
     name = "profiler",
@@ -28,4 +29,19 @@ cc_binary(
         "//transport/mqtt:mqtt",
         "@boost//:program_options",
     ],
+)
+
+pybind_extension(
+    name = "roboflex_profiler_ext",
+    srcs = ["pybindings.cpp"],
+    copts = ["-std=c++20"],
+    visibility = ["//visibility:public"],
+    deps = [":profiler"],
+)
+
+py_library(
+    name = "roboflex_profiler_python",
+    srcs = ["__init__.py"],
+    data = [":roboflex_profiler_ext.so"],
+    visibility = ["//visibility:public"],
 )
