--- a/core/BUILD.bazel
+++ b/core/BUILD.bazel
@@ -37,6 +37,7 @@ cc_library(
     ],
     data = ['__init__.py'], # yeah it's a python file, but it won't hurt to just have it there
     copts = ["-std=c++20"],
+    linkopts = ["-lpthread"],
     include_prefix = "roboflex/core",
     visibility = ["//visibility:public"],
     deps = [
@@ -45,3 +46,23 @@ cc_library(
         "//third_party:eigen",
     ]
 )
+
+# cc_binary(
+
+#     # name = "tensors_0",
+#     # srcs = ["tensors_0.cpp"],
+#     # copts = ["-std=c++20"],
+#     # deps
+#     name = "roboflex_serialization",
+#     srcs = [
+#         "serialization/serialization.h",
+#         "serialization/serialization.cpp",
+#     ],
+
+#     copts = ["-std=c++20"],
+#     deps = [
+#         # "//third_party:flatbuffers",
+#         # "//third_party:xtensor",
+#         # "//third_party:eigen",
+#     ]
+# )
