--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
 bazel-**
 .vscode
 build
+dist
 pyvenv
 __pycache__
 **.ipynb
 **/webcam_fastsam/models/*
 **/webcam_fastsam/submodules/*
+**.whl
+**.egg-info
