--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,8 +42,11 @@ FetchContent_MakeAvailable(xtensor)
 
 # Download and configure eigen
 FetchContent_Declare(eigen
-    URL https://gitlab.com/libeigen/eigen/-/archive/3.4.0/eigen-3.4.0.zip
-    URL_HASH SHA256=1ccaabbfe870f60af3d6a519c53e09f3dcf630207321dffa553564a8e75c4fc8
+    # URL https://gitlab.com/libeigen/eigen/-/archive/3.4.0/eigen-3.4.0.zip
+    # URL_HASH SHA256=1ccaabbfe870f60af3d6a519c53e09f3dcf630207321dffa553564a8e75c4fc8
+    # DOWNLOAD_NO_PROGRESS ON
+    GIT_REPOSITORY https://gitlab.com/libeigen/eigen.git
+    GIT_TAG        origin/master
     DOWNLOAD_NO_PROGRESS ON
 )
 FetchContent_MakeAvailable(eigen)
