--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -19,7 +19,8 @@ include(FetchContent)
 # download and build pybind11
 FetchContent_Declare(pybind11
     GIT_REPOSITORY https://github.com/pybind/pybind11.git
-    GIT_TAG        v2.8.1
+    #GIT_TAG        v2.8.1
+    GIT_TAG        v2.11.1
 )
 FetchContent_MakeAvailable(pybind11)
 # add_subdirectory(pybind11)
