--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.18)
 
 option(BUILD_ROBOFLEX_PYTHON_EXT "Build the Roboflex Python Extension" ON)
 
-project(roboflex_core VERSION 0.1.18)
+project(roboflex_core VERSION 0.1.19)
 
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 
@@ -104,6 +104,7 @@ add_library(roboflex_core STATIC
     include/roboflex_core/core_messages/core_messages.h
     include/roboflex_core/core_nodes/callback_fun.h
     include/roboflex_core/core_nodes/core_nodes.h
+    include/roboflex_core/core_nodes/every_n.h
     include/roboflex_core/core_nodes/filter_fun.h
     include/roboflex_core/core_nodes/frequency_generator.h
     include/roboflex_core/core_nodes/graph_root.h
